--- a/index.html
+++ b/index.html
@@ -1,22 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
 	<title>test.html</title>
 	<link rel="stylesheet" href="./style.css">
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	
 	
 </head>
+
+
 <body class="landing">
 
-<nav>
-	
-	<a href="./index.html">About</a>
-	<a href="./Gallery.html">Gallery</a>
-	<a href="./contact.html">Contact</a>
-	
+
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark ">
+	<a class="navbar-brand"  >D/Moss</a>
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="Index.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Gallery.html">Gallery</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Contact.html">Contact</a>
+    </li>
+  </ul>
+
+  
 </nav>
+  
+<!--  Alternative titles for landing
 
+<div class="container-fluid logos"">
+	<div class="row">
+	<div class="col center"></div>
+ 	 <div class="col center white">FILM</div>
+  	 <div class="col center white">PHOTO</div>
+ 	 <div class="col center white">EVENT</div>
+ 	 <div class="col center"></div>
+	</div>
+</div>
 
-   
+--!>
 
 </body>
 </html>
