--- a/Contact.html
+++ b/Contact.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>Contact</title>
+	
+	
 	<link rel="stylesheet" href="./style.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/galleria.min.js"></script>
-	<style>
-    .galleria{ width: 100%; height: 700px; margin-top: 50px;}
-</style>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
+
+
 <body>
 
-<nav>
-	
-	<a href="./index.html" class="button">About</a>
-	<a href="./Gallery.html" class="button">Gallery</a>
-	<a href="./contact.html">Contact</a>
-	
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+	<a class="navbar-brand"  >D/Moss</a>
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="Index.html">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Gallery.html">Gallery</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="Contact.html">Contact</a>
+    </li>
+  </ul>
+  
 </nav>
 
 
- <div class="galleria">
-            <img src="1.jpg">
-            <img src="2.jpg">
-            <img src="3.jpg">
-            <img src="4.jpg">
-            <img src="5.jpg">
-            <img src="6.jpg">
-        </div>
-        <script>
-            (function() {
-                Galleria.loadTheme('https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/themes/classic/galleria.classic.min.js');
-                Galleria.run('.galleria');
-            }());
-        </script>
 
 </body>
 </html>
